# Excalibur

./: .gitignore  .prettierrc.json  Excalibur.code-workspace  README.md  capacitor.config.ts  eslint.config.js  index.html  ionic.config.json  package-lock.json  package.json  towncrier.toml  tsconfig.json  vite.config.ts
server/: .gitignore  CHANGELOG.md  README.md  dev-install.sh  pyproject.toml
server/changelog/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.2.0.md
server/changelog.d/: +api_and_no_api_is_the_same.fixed.md  +cachetools.deps.md  +chunked_encryption.fixed.md  +cli_banner.added.md  +config.added.md  +cors_option.internal.md  +create_directory_endpoint.changed.md  +custom_build.internal.md  +default_host.changed.md  +default_port.changed.md  +fastapi.deps.md  +file_upload.changed.md  +gen_token_endpoint.internal.md  +ipython.deps.md  +log_to_file.added.md  +missing_encryption.security.md  +more_tests.internal.md  +multi_user.added.md  +nicer_warnings.changed.md  +pwa.added.md  +pydantic.deps.md  +rename_file_endpoint.added.md  +ruff.deps.md  +split_changelog.internal.md  +sqlmodel.deps.md  +srp_hmac.security.md  +token_bucket_test.internal.md  +typer.deps.md  +typer.internal.md  +uv_lock.internal.md  +uvicorn.deps.md  +well_known_endpoint_names.fixed.md
server/examples/: Auth-Example.md  retrieve_token.py
server/excalibur_server/: COMPATIBILITY.toml  alembic.ini  app.py  cli.py  config.template.toml  conftest.py  consts.py  main.py  meta.py
server/excalibur_server/alembic/: env.py  script.py.mako
server/excalibur_server/alembic/versions/: 202508081927-6751bb101c16-create_user_table.py  202508151444-d5f6ecc5fa23-update_user_table.py  202508151514-24ec4622b630-add_srp_group_to_user.py  202508301701-438cddc6f4c8-create_fsnameable_table.py  202509051424-180559123992-version_0_2_0.py  6751bb101c16_create_user_table.py  97acf8c4b885_add_skeleton_of_user_table.py
server/excalibur_server/api/: app.py  cache.py  cors.py  log_filters.py  logging.py  meta.py  middlewares.py  misc.py  pwa.py  test_app.py
server/excalibur_server/api/routes/: __init__.py
server/excalibur_server/api/routes/auth/: __init__.py  ack.py  comms.py  hmac_demo.py  info.py  pop_demo.py  test_comms.py  test_hmac_demo.py  test_pop_demo.py  util.py
server/excalibur_server/api/routes/files/: __init__.py  checks.py  conftest.py  create.py  delete.py  retrieval.py  test_checks.py  test_create.py  test_delete.py  test_retrieval.py  test_updates.py  updates.py
server/excalibur_server/api/routes/security/: __init__.py  security_details.py  vault_key.py
server/excalibur_server/api/routes/security/auth/: comms.py  info.py  test_comms.py
server/excalibur_server/api/routes/users/: __init__.py  test_user.py  user.py
server/excalibur_server/api/routes/well_known/: __init__.py  clock.py  compatibility.py  heartbeat.py  test_clock.py  test_compatibility.py  test_heartbeat.py  test_version.py  version.py
server/excalibur_server/api/v1/: app.py  meta.py
server/excalibur_server/api/v1/files/: __init__.py  checks.py  consts.py  create.py  delete.py  listings.py  retrieval.py  routes.py  structures.py
server/excalibur_server/api/v1/files/middleware/: size_limit.py
server/excalibur_server/api/v1/files/routes/: __init__.py  checks.py  create.py  delete.py  (+4 more)
server/excalibur_server/api/v1/security/: __init__.py  auth.py  cache.py  consts.py  routes.py  security_details.py  srp.py  srp_ws.py  test_auth.py  test_security_details.py  test_srp_routes.py  vault_key.py
server/excalibur_server/api/v1/well_known/: __init__.py  clock.py  compatibility.py  heartbeat.py  test_clock.py  test_compatibility.py  test_heartbeat.py  test_version.py  version.py
server/excalibur_server/cli/: __init__.py  add_user.py  build.py  db.py  files.py  init_server.py  reset_server.py  run_tests.py  setup_server.py  start_server.py  user.py
server/excalibur_server/files/: __init__.py  routes.py
server/excalibur_server/security/: __init__.py  auth.py  routes.py
server/excalibur_server/src/: compatibility.py  crypto.py  exef.py  path.py  test_exef.py  test_path.py  test_token_bucket.py  test_url.py  test_websocket.py  token_bucket.py  url.py  users.py  utils.py  websocket.py
server/excalibur_server/src/auth/: credentials.py  hmac.py  keygen.py  pop.py  test_keygen.py  test_pop.py
server/excalibur_server/src/auth/srp/: __init__.py  operation.py
server/excalibur_server/src/auth/token/: auth.py  test_jwt.py
server/excalibur_server/src/config/: __init__.py  api.py  config.py  logging.py  security.py  server.py  storage.py
server/excalibur_server/src/db/: operations.py  tables.py
server/excalibur_server/src/db/tables/: __init__.py  user.py
server/excalibur_server/src/exef/: __init__.py  crypto.py  exef.py  structures.py  test_exef.py
server/excalibur_server/src/files/: listings.py
server/excalibur_server/src/middleware/: __init__.py  rate_limit.py  size_limit.py
server/excalibur_server/src/middleware/crypto/: __init__.py  middleware.py  routing.py  structures.py
server/excalibur_server/src/security/: cache.py  consts.py  keygen.py  security_details.py  srp.py  test_srp.py
server/excalibur_server/src/security/auth/: token.py
server/excalibur_server/src/security/srp/: group.py  operation.py  test_operation.py
server/excalibur_server/src/security/token/: __init__.py  auth.py  jwt.py  test_jwt.py
server/excalibur_server/src/versioning/: __init__.py  operators.py  py2semver.py  test_operators.py  test_py2semver.py
server/excalibur_server/static/: .gitignore  .gitkeep
(+312 files in other folders)
