[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[project]
name = "excalibur-server"
version = "0.2.0b2"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.4",
    "cachetools>=6.1.0",
    "duckdb>=1.3.2",
    "duckdb-engine>=0.17.0",
    "fastapi>=0.116.1",
    "gitpython>=3.1.45",
    "packaging>=25.0",
    "pycryptodome>=3.23.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "semver>=3.0.4",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "toml>=0.10.2",
    "typer>=0.16.2",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]
requires-python = ">=3.11"
authors = [
    { name = "PhotonicGluon", "email" = "25820201+PhotonicGluon@users.noreply.github.com" },
]
description = "A trustless secure file management solution using military-grade encryption"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/PhotonicGluon/Excalibur.git"
Issues = "https://github.com/PhotonicGluon/Excalibur/issues"

[project.scripts]
excalibur = "excalibur_server.cli:app"

[dependency-groups]
dev = ["ipython>=9.4.0", "ruff>=0.12.12"]
test = ["httpx>=0.28.1", "pytest>=8.4.2"]

[tool.uv.build-backend]
module-name = "excalibur_server"
module-root = ""
source-exclude = [
    "test*",                             # All test files are excluded
    "excalibur_server/conftest.py",      # Conftest is excluded
    "excalibur_server/cli/run_tests.py", # Testing command is excluded
]

[tool.uv.workspace]
members = ["dist/excalibur-server-test"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "E501", # line-too-long
    "C901", # too-complex
]
